# embedded-tdd-katas

./: .gitmodules  .replit  Makefile  README.md  TODO.md  Talk.md  engine.js  package-lock.json  replit.nix
Code/: .gitignore  CMakeLists.txt  Makefile  README.md  package-lock.json  package.json  setup.sh  simulate.sh
Code/src/: CMakeLists.txt
Code/src/hello/: CMakeLists.txt  hello.c  rgbdriver.c  rgbdriver.h
Code/src/interrupt/: KATA.md  interrupt.c
Code/src/leddriver/: CMakeLists.txt  KATA.md  leddriver.c  leddriver.h  leddriver_main.c  leddriver_test.c
Code/src/mock-pico-stdlib/: mock-pico.h
Code/tools/: bootrom.ts  intelhex.ts  logging.ts  simulate.ts
Talk/: Makefile  Talk.md  package.json
